--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <!--per evitare che ci siano problemi di visualizzazione-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Capolavoro</title>
+    <!-- user-scalable=no evita che l'utente possa zoommare sulla pagina -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -38,7 +39,9 @@
         <p>Made by Alessandro Manara</p>
     </footer>
 
+    <!--matrice delle domande-->
     <script src="questions.js"></script>
+    <!--script che gestisce tutta la logica-->
     <script src="script.js"></script>
 </body>
 </html>
